[package]
name = "steamworks-sys"
version = "0.13.0"
authors = ["Thinkofname"]
build = "build.rs"
description = "Provides raw bindings to the steamworks sdk"
license = "MIT / Apache-2.0"
repository = "https://github.com/Noxime/steamworks-rs"
documentation = "https://docs.rs/steamworks-sys"
edition = "2021"
rust-version = "1.80.0"

[features]
default = []
refresh-bindgen = ["bindgen"]

[dependencies]

[build-dependencies]
bindgen = { version = "0.69.2", optional = true }
build_cfg = "1.1.0"